test/files/neg/implicits.check
implicits.scala:21: error: type mismatch;
 found   : Pos
 required: ?{val +: ?}
Note that implicit conversions are not applicable because they are ambiguous:
 both method any2plus in object Sub of type (x: Any)Sub.Plus
 and method pos2int in object Super of type (p: Pos)int
 are possible conversion functions from Pos to ?{val +: ?}
  f(p+1)
    ^
implicits.scala:38: error: type mismatch;
 found   : test2.HSome[java.lang.String,test2.HMap]
 required: Int
  foo(set)
      ^
implicits.scala:46: error: type mismatch;
 found   : List[Any]
 required: scala.List[Mxml]
        children.toList.flatMap ( e => {
                                ^
three errors found
